# know

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: backend.rs  cli.rs  docker.rs  ingest.rs  main.rs  qdrant.rs  registry.rs  server.rs
